--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="sections">
 
 		<figure class="box">
-			<img id="click2" , class="ruum" , class="hover" src="../JavaScript Programm/images/IMG_5234.JPG" alt="/images/IMG_5234" width="146.6666" height="131.666">
+			<img id="click2" , class="ruum" , class="hover" src="IMG_5234.JPG" alt="/images/IMG_5234" width="146.6666" height="131.666">
 			<div id="myProgress">
 				<div id="thebar"></div>
 			</div>
@@ -22,7 +22,7 @@
 
 <br>
 		<box class="box" id="down">
-			<img class="ruum" class="koht" src="‎⁨.../Documents⁩/⁨GitHub⁩/⁨TheHagueUniversity---JavaScript-Hans⁩/⁨images⁩/download.png" alt="/images/IMG_5234" width="146.6666" height="131.666" id="click3" onclick="firstFunction()">
+			<img class="ruum" class="koht" src="download.png" alt="/images/‎⁨download.png" width="146.6666" height="131.666" id="click3" onclick="firstFunction()">
 		</a></box>
 		<div class="container">
 		<box class="box_dic"type="button" value="Alert" onclick="firstFunction()" id="alert"><a type="button" value="Alert" onclick="firstFunction()" id="alert" target="_blank" href="images.JPG" class="ruum">
